# custom-collections-desktop-app

./: .gitattributes  .gitignore  CODEOWNERS  ExampleBulkUpload.xlsx  README.md  launch_application.bat  launch_application.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.bat  setup.txt
.github/workflows/: build.yml  jekyll-gh-pages.yml
docs/: application_usage.md  index.md  local_app_setup.md  mongo_setup.md  overview.md  python_setup.md
src/: app.py  app.spec  collections_app.py  mongo.py  security.py  settings.EXAMPLE.conf
src/support/: logging_config.py  mongo_conn.py  security.py
