[tool.poetry]
name = "custom-collections-desktop-app"
version = "0.1.0"
description = ""
authors = ["Eric Sutton <ericsutton6@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
customtkinter = "^5.2.2"
pydantic-settings = "^2.7.1"
pymongo = "^4.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.2"
tcl = "^0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.6.3"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
